--- a/apps/fis-scraper-frontend/src/app/notifications/notifications/notifications.component.scss
+++ b/apps/fis-scraper-frontend/src/app/notifications/notifications/notifications.component.scss
@@ -1,17 +1,7 @@
-.notifications {
-  position: fixed;
-  inset: auto 3rem 3rem auto;
+:host {
+  margin-left: auto;
 }
 
-::ng-deep.mat-menu-panel {
-  max-width: none !important;
-  width: max-content;
-  padding: 1rem;
-  max-height: 70vh;
-}
-
-::ng-deep.mat-menu-content {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
+.no-notifications {
+  margin: 1rem;
 }
