--- a/apps/fis-scraper-frontend/src/app/navigation/navigation.component.scss
+++ b/apps/fis-scraper-frontend/src/app/navigation/navigation.component.scss
@@ -23,3 +23,29 @@ button {
     font-weight: 700;
   }
 }
+
+.mat-expansion-panel-header {
+  border-radius: 0 100vh 100vh 0;
+  padding: 0 0.5rem 0 0;
+  font: 400 16px/24px Roboto, sans-serif;
+  height: 56px;
+
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.07) !important;
+  }
+
+  &:focus {
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+
+  & mat-icon {
+    margin: 0 2rem 0 1rem;
+    opacity: 0.5;
+  }
+}
+
+mat-expansion-panel mat-nav-list {
+  margin: 0 -1.5rem 0 -1.5rem;
+}
+
+
