--- a/apps/fis-scraper-frontend/src/app/scraper/unprocessed-data/dialog/dialog.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/unprocessed-data/dialog/dialog.html
@@ -1,3 +1,4 @@
+<!--suppress HtmlUnknownBooleanAttribute, HtmlUnknownTarget -->mlUnknownTarget -->mlUnknownTarget -->mlUnknownTarget -->
 <style>
   img {
     width: 100%;
