--- a/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details.component.html
@@ -1,3 +1,4 @@
+<!--suppress JSUnusedGlobalSymbols -->
 <ng-container *ngIf="raceData$ | async as raceData; else loader">
   <div
     *ngIf="
@@ -72,10 +73,10 @@
         <td mat-cell *matCellDef="let item">
           <ng-container *ngIf="column === 'disqualified'; else regularContent">
             <mat-icon
-              [svgIcon]="item.disqualified ? 'disqualified' : 'finished'"
-              [color]="item.disqualified ? 'warn' : null"
+              [svgIcon]="item[column] ? 'disqualified' : 'finished'"
+              [color]="item[column] ? 'warn' : null"
               [matTooltip]="
-                item.disqualified ? 'Disqualified' : 'Finished'
+                item[column] ? 'Disqualified' : 'Finished'
               "></mat-icon>
           </ng-container>
 
