--- a/apps/fis-scraper-frontend/src/app/scraper/scrap-table/dialog/dialog.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/scrap-table/dialog/dialog.html
@@ -1,3 +1,4 @@
+<!--suppress HtmlUnknownBooleanAttribute -->
 <h2 mat-dialog-title>Scrap table</h2>
 <mat-dialog-content class="mat-typography">
   <p>
