Fix icons - another attempt.

--- a/apps/fis-scraper-frontend/src/app/scraper/unprocessed-data/dialog/dialog.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/unprocessed-data/dialog/dialog.html
@@ -15,9 +15,9 @@
     detailed results table at fis-ski.com.
   </p>
   <h3 mat-dialog-title>Basic results table:</h3>
-  <img src="assets/results.png" alt="Basic results table description" />
+  <img src="/assets/results.png" alt="Basic results table description" />
   <h3 mat-dialog-title>Detailed results table:</h3>
-  <img src="assets/details.png" alt="Detailed results table description" />
+  <img src="/assets/details.png" alt="Detailed results table description" />
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Close</button>
