--- a/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details.component.html
@@ -73,7 +73,7 @@
         <td mat-cell *matCellDef="let item">
           <ng-container *ngIf="column === 'disqualified'; else regularContent">
             <mat-icon
-              [svgIcon]="item[column] ? 'disqualified' : 'finished'"
+              [svgIcon]="item[column] ? icons.finished : icons.disqualified"
               [color]="item[column] ? 'warn' : null"
               [matTooltip]="
                 item[column] ? 'Disqualified' : 'Finished'
